--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prepare": "panda codegen",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ark-ui/solid": "^2.2.0",
     "@solidjs/router": "^0.13.2",
     "@tanstack/solid-query": "^5.32.0",
     "@tanstack/solid-query-devtools": "^5.32.0",
@@ -16,6 +18,7 @@
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
+    "@pandacss/dev": "^0.37.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-solid": "^2.10.2"
