--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "prepare": "panda codegen",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -15,10 +14,19 @@
     "@tanstack/solid-query": "^5.32.0",
     "@tanstack/solid-query-devtools": "^5.32.0",
     "@tanstack/solid-table": "^8.16.1",
+    "axios": "^1.6.8",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.37.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.2",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "solid-devtools": "^0.30.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-solid": "^2.10.2"
